chore: add @TenzDelek to TSC as maintainer of Conference Website (#2288)
Co-authored-by: TenzDelek <tibetdelek@gmail.com>

--- a/MAINTAINERS.yaml
+++ b/MAINTAINERS.yaml
@@ -739,7 +739,10 @@
   githubID: 6034322
 - name: TenzDelek
   github: TenzDelek
-  isTscMember: false
+  linkedin: tenzdelek
+  slack: U06SWFWLLQG
+  availableForHire: true
+  isTscMember: true
   repos:
     - conference-website
   githubID: 122612557
